# mcp-pyatv

./: .gitignore  CLAUDE.md  LICENSE  README.md  STATUS.md  pyproject.toml
src/mcp_pyatv/: connection.py  recipes.py  server.py  storage.py  util.py
src/mcp_pyatv/tools/: __init__.py  apps.py  audio.py  batch.py  developer.py  discovery.py  keyboard.py  now_playing.py  pairing.py  power.py  recipes.py  remote.py  stream.py
tests/: conftest.py  test_batch.py  test_connection.py  test_recipes.py
