[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-pyatv"
version = "0.2.0"
description = "MCP server for controlling Apple TV, HomePod, and AirPlay devices via pyatv"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "crlian" }
]
keywords = ["mcp", "apple-tv", "homepod", "airplay", "pyatv", "model-context-protocol"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "pyatv>=0.16.0",
    "fastmcp>=2.0.0",
]

[project.scripts]
mcp-pyatv = "mcp_pyatv.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_pyatv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
